--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/sla.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/sla.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>SEBASTIAN | Tenant</title>
+    <title>SEBASTIAN | Tenant SLA</title>
 
     <!-- Bootstrap -->
     <link href="../../gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
