--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint_wizard.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint_wizard.html
@@ -266,7 +266,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">VNFD Path <!-- span class="required">*</span -->
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">App Path <!-- span class="required">*</span -->
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                           <input type="text" id="createApp-pkgpath" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
