--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/group.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/group.html
@@ -52,6 +52,12 @@
                 <ul class="nav side-menu">
                   <li><a href="../index.html"><i class="fa fa-home"></i> Home </a>
                   </li>
+                  <li><a><i class="fa fa-file-text"></i> VS Blueprint <span class="fa fa-chevron-down"></a>
+                    <ul class="nav child_menu">
+                      <li><a href="./blueprint/blueprint_wizard.html">VS Blueprint onboarding</a></li>
+                      <li><a href="./blueprint/blueprint.html">VS Blueprint</a></li>
+                    </ul>
+                  </li>
                   <li><a><i class="fa fa-gears"></i> ADMIN <span class="fa fa-chevron-down"></a>
                     <ul class="nav child_menu">
                       <li><a href="group.html">Group</a></li>
@@ -113,7 +119,7 @@
               <div class="col-md-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>Group <small></small></h2>
+                    <h2>Groups <small></small></h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
