--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/tenant.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/tenant.html
@@ -52,6 +52,12 @@
                 <ul class="nav side-menu">
                   <li><a href="../index.html"><i class="fa fa-home"></i> Home </a>
                   </li>
+                  <li><a><i class="fa fa-file-text"></i> VS Blueprint <span class="fa fa-chevron-down"></a>
+                    <ul class="nav child_menu">
+                      <li><a href="./blueprint/blueprint_wizard.html">VS Blueprint onboarding</a></li>
+                      <li><a href="./blueprint/blueprint.html">VS Blueprint</a></li>
+                    </ul>
+                  </li>
                   <li><a><i class="fa fa-gears"></i> ADMIN <span class="fa fa-chevron-down"></a>
                     <ul class="nav child_menu">
                       <li><a href="group.html">Group</a></li>
@@ -126,23 +132,23 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="x_panel">
-                   <div class="x_title">
-                    <h2>Tenant <small></small></h2>
+                  <div class="x_title">
+                    <h2>Tenants <small></small></h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
                     </ul>
                     <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
+                  </div>
+                  <div class="x_content">
                       <table class="table table-hover" id="tenantTable">
                         <script>readGroupsForTenants(["selectedGroup", "createTenant-group"], "response");</script>                        
                       </table>
-                    </div>
                   </div>
                 </div>
-                <div class="clearfix">
-                </div>
+              </div>
+              <div class="clearfix">
+              </div>
             </div>
 		  
             <div class="row">
