VS descriptors page + management

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint_details.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>SEBASTIAN | Blueprint wizard</title>
+    <title>SEBASTIAN | Blueprint details</title>
 
     <!-- Bootstrap -->
     <link href="../../../gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -57,6 +57,7 @@
                     <ul class="nav child_menu">
                       <li><a href="blueprint_wizard.html">VS Blueprint onboarding</a></li>
                       <li><a href="blueprint.html">VS Blueprint</a></li>
+                      <li><a href="vs_descriptor.html">VS Descriptor</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-gears"></i> ADMIN <span class="fa fa-chevron-down"></a>
