--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/group.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/group.html
@@ -56,6 +56,7 @@
                     <ul class="nav child_menu">
                       <li><a href="./blueprint/blueprint_wizard.html">VS Blueprint onboarding</a></li>
                       <li><a href="./blueprint/blueprint.html">VS Blueprint</a></li>
+                      <li><a href="./blueprint/vs_descriptor.html">VS Descriptor</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-gears"></i> ADMIN <span class="fa fa-chevron-down"></a>
