--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint_wizard.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint_wizard.html
@@ -57,6 +57,7 @@
                     <ul class="nav child_menu">
                       <li><a href="blueprint_wizard.html">VS Blueprint onboarding</a></li>
                       <li><a href="blueprint.html">VS Blueprint</a></li>
+                      <li><a href="vs_descriptor.html">VS Descriptor</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-gears"></i> ADMIN <span class="fa fa-chevron-down"></a>
