--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/vs_descriptor.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/vs_descriptor.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>SEBASTIAN | Blueprints</title>
+    <title>SEBASTIAN | VS Descriptors</title>
 
     <!-- Bootstrap -->
     <link href="../../../gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -122,7 +122,7 @@
               <div class="col-md-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>VS Blueprints <small></small></h2>
+                    <h2>VS Descriptors <small></small></h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -130,8 +130,8 @@
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
-                      <table class="table table-hover" id="blueprintsTable">
-                        <script>readVSBlueprints("blueprintsTable", "response");</script>                        
+                      <table class="table table-hover" id="vsDescrTable">
+                        <script>readVSDescriptors("vsDescrTable", "response");</script>                        
                       </table>
                   </div>
                 </div>
@@ -147,6 +147,7 @@
 	
             <div class="row">
               <div class="col-md-4">
+                <!-- button type="button" class="btn btn-info btn-md" onclick=window.history.back();><i class="fa fa-caret-square-o-left"></i> Back</button -->
               </div>
       
               <div class="col-md-4">
@@ -161,7 +162,6 @@
               <div class="col-md-6" id="response">
               </div>
             </div>
-            <div id="vsdModals"></div>
           </div>
         </div>
         <!-- /page content -->
