VS instances page + utils

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/blueprint.html
@@ -54,11 +54,12 @@
                 <ul class="nav side-menu">
                   <li><a href="../../index.html"><i class="fa fa-home"></i> Home </a>
                   </li>
-                  <li><a><i class="fa fa-file-text"></i> VS Blueprint <span class="fa fa-chevron-down"></a>
+                  <li><a><i class="fa fa-file-text"></i> VS Catalogue <span class="fa fa-chevron-down"></a>
                     <ul class="nav child_menu">
                       <li><a href="blueprint_wizard.html">VS Blueprint onboarding</a></li>
                       <li><a href="blueprint.html">VS Blueprint</a></li>
                       <li><a href="vs_descriptor.html">VS Descriptor</a></li>
+                      <li><a href="vs_instance.html">VS Instance</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-gears"></i> ADMIN <span class="fa fa-chevron-down"></a>
