--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/vsd_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/pages/blueprint/vsd_details.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>SEBASTIAN | Blueprint details</title>
+    <title>SEBASTIAN | VS Descriptor</title>
 
     <!-- Bootstrap -->
     <link href="../../../gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,6 +31,7 @@
     <script src="../../plugin/tenant_utils.js"></script>
     <script src="../../plugin/group_utils.js"></script>
     <script src="../../plugin/blueprint_utils.js"></script>
+    <script src="../../plugin/vsdescriptor_utils.js"></script>
   </head>
 
   <body class="nav-md">
@@ -122,7 +123,7 @@
               <div class="col-md-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>VS Blueprint details <small></small></h2>
+                    <h2>VS Descriptors <small></small></h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -130,8 +131,8 @@
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
-                      <table class="table table-hover" id="blueprintTable">
-                        <script>readVSBlueprint("blueprintTable", "response");</script>                        
+                      <table class="table table-hover" id="vsDescrTable">
+                        <script>readVSDescriptor("vsDescrTable", "response");</script>                        
                       </table>
                   </div>
                 </div>
@@ -162,6 +163,8 @@
               <div class="col-md-6" id="response">
               </div>
             </div>
+            
+            <div id="instantiateModalDiv"></div>
           </div>
         </div>
         <!-- /page content -->
