VS instances counter added

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/index.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/index.html
@@ -200,7 +200,7 @@
     <script>getAllTenants("count-Tenant","response",fillTenantCounter);</script>
     <script>getVSBlueprints("count-Blueprint","response",fillBlueprintCounter);</script>
     <script>getAllVSDescriptors("count-VSD","response",fillVSDCounter);</script>
-    <!--script>getAllVSInstances("count-VSI","response",fillVSICounter);</script-->
+    <script>getVSInstanceIds("count-VSI","response",fillVSICounter);</script>
     
     <!-- jQuery -->
     <script src="../gentelella/vendors/jquery/dist/jquery.min.js"></script>
