Minor fix in WEB GUI home, link to blueprints

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/index.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/index.html
@@ -142,7 +142,7 @@
                 <div class="tile-stats">
                   <div class="icon"><i class="fa fa-file-text"></i></div>
                   <div class="count" id="count-Blueprint">0</div>
-                  <h3><a href="./pages/ns/ns_instances.html">Blueprints</a></h3>
+                  <h3><a href="./pages/blueprint/blueprint.html">Blueprints</a></h3>
                   <p></p>
                 </div>
               </div>
