Tenant WEB GUI updated

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_details.html
@@ -83,22 +83,22 @@
                 <ul class="nav side-menu">
                   <li><a href="../../index.html"><i class="fa fa-home"></i> Home </a>
                   </li>
-                  <li><a href="../group.html"><i class="fa fa-group"></i> Group </a>
+                  <li><a href="../group.html"><i class="fa fa-group"></i> Groups </a>
                   </li>
-                  <li><a href="../tenant.html"><i class="fa fa-user"></i> Tenant </a>
+                  <li><a href="../tenant.html"><i class="fa fa-user"></i> Tenants </a>
                   </li>
                   <li><a><i class="fa fa-file-text"></i> VS Catalogue <span class="fa fa-chevron-down"></a>
                     <ul class="nav child_menu">
                       <li><a href="blueprint_wizard.html">VS Blueprint onboarding</a></li>
-                      <li><a href="blueprint.html">VS Blueprint</a></li>
-                      <li><a href="vs_descriptor.html">VS Descriptor</a></li>
+                      <li><a href="blueprint.html">VS Blueprints</a></li>
+                      <li><a href="vs_descriptor.html">VS Descriptors</a></li>
                     </ul>
                   </li>
                   <li><a href="vs_descriptor.html"><i class="fa fa-file-text-o"></i> VS  Descriptors </a>
                   </li>
                   <li><a href="../../index.html"><i class="fa fa-file"></i> Network Slices </a>
                   </li>
-                  <li><a href="vs_instance.html"><i class="fa fa-file-o"></i> VS Instance </a>
+                  <li><a href="vs_instance.html"><i class="fa fa-file-o"></i> VS Instances </a>
                   </li>
                 </ul>
               </div>
