--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/vsd_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/vsd_details.html
@@ -38,7 +38,7 @@
     <link href="../../css/sebastian.min.css" rel="stylesheet">
     
      <!-- jQuery-3.2.1 -->
-    <script src="../../plugin/jquery-3.2.1.min.js"></script>
+    <script src="../../../plugin/jquery-3.2.1.min.js"></script>
     
     <!-- SEBASTIAN Scripts -->
     <script src="../../../plugin/rest_api.js"></script>
@@ -71,13 +71,13 @@
                   </li>
                   <li><a><i class="fa fa-file-text"></i> VS Catalogue <span class="fa fa-chevron-down"></a>
                     <ul class="nav child_menu">
-                      <li><a href="blueprint.html">VS Blueprint</a></li>
-                      <li><a href="vs_descriptor.html">VS Descriptor</a></li>
+                      <li><a href="blueprint.html">VS Blueprints</a></li>
+                      <li><a href="vs_descriptor.html">VS Descriptors</a></li>
                     </ul>
                   </li>
                   <li><a href="vs_descriptor.html"><i class="fa fa-file-text-o"></i> VS  Descriptors </a>
                   </li>
-                  <li><a href="vs_instance.html"><i class="fa fa-file-o"></i> VS Instance </a>
+                  <li><a href="vs_instance.html"><i class="fa fa-file-o"></i> VS Instances </a>
                   </li>
                 </ul>
               </div>
@@ -138,7 +138,7 @@
                   </div>
                   <div class="x_content">
                       <table class="table table-hover" id="vsDescrTable">
-                        <script>readVSDescriptor("vsDescrTable", "response");</script>                        
+                        <script>readVSDescriptor("vsDescrTable");</script>                        
                       </table>
                   </div>
                 </div>
