--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/index.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/index.html
@@ -93,7 +93,7 @@
                     <ul class="nav child_menu">
                       <li><a href="./pages/blueprint/blueprint_wizard.html">VS Blueprint onboarding</a></li>
                       <li><a href="./pages/blueprint/blueprint.html">VS Blueprints</a></li>
-                      <li><a href="./pages/blueprint/vs_descriptor.html">VS Descriptors</a></li>
+                      <!--li><a href="./pages/blueprint/vs_descriptor.html">VS Descriptors</a></li-->
                     </ul>
                   </li>
                   <li><a href="./pages/blueprint/vs_descriptor.html"><i class="fa fa-file-text-o"></i> VS  Descriptors </a>
@@ -134,6 +134,15 @@
                 <a id="menu_toggle"><i class="fa fa-bars"></i></a>
               </div>
               <ul class="nav navbar-nav navbar-right">
+                <li class="">
+                  <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    <img src="images/user_icon.png" alt="">
+                    <span class=" fa fa-angle-down"></span>
+                  </a>
+                  <ul class="dropdown-menu dropdown-usermenu pull-right">
+                    <li><a onclick=logout();><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                  </ul>
+                </li>
                 <li class="">
                   <a href="http://www.nextworks.it">
                     <img src="./images/logo_nextworks_150.png" alt="">
