--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
@@ -38,7 +38,7 @@
     <link href="../../css/sebastian.min.css" rel="stylesheet">
     
      <!-- jQuery-3.2.1 -->
-    <script src="../../plugin/jquery-3.2.1.min.js"></script>
+    <script src="../../../plugin/jquery-3.2.1.min.js"></script>
     
     <!-- SEBASTIAN Scripts -->
     <script src="../../../plugin/rest_api.js"></script>
@@ -91,7 +91,7 @@
                     <ul class="nav child_menu">
                       <li><a href="blueprint_wizard.html">VS Blueprint onboarding</a></li>
                       <li><a href="blueprint.html">VS Blueprints</a></li>
-                      <li><a href="vs_descriptor.html">VS Descriptors</a></li>
+                      <!--li><a href="vs_descriptor.html">VS Descriptors</a></li-->
                     </ul>
                   </li>
                   <li><a href="vs_descriptor.html"><i class="fa fa-file-text-o"></i> VS  Descriptors </a>
@@ -132,6 +132,15 @@
                 <a id="menu_toggle"><i class="fa fa-bars"></i></a>
               </div>
               <ul class="nav navbar-nav navbar-right">
+                <li class="">
+                  <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    <img src="../../images/user_icon.png" alt="">
+                    <span class=" fa fa-angle-down"></span>
+                  </a>
+                  <ul class="dropdown-menu dropdown-usermenu pull-right">
+                    <li><a onclick=logout();><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                  </ul>
+                </li>
                 <li class="">
                   <a href="http://www.nextworks.it">
                     <img src="../../images/logo_nextworks_150.png" alt="">
