--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
@@ -122,6 +122,15 @@
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
+                  <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    <img src="../../images/user_icon.png" alt="">
+                    <span class=" fa fa-angle-down"></span>
+                  </a>
+                  <ul class="dropdown-menu dropdown-usermenu pull-right">
+                    <li><a onclick=logout();><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                  </ul>
+                </li>
+                <li class="">
                   <a href="http://www.nextworks.it">
                     <img src="../../images/logo_nextworks_150.png" alt="">
                   </a>
