--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/sla.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/sla.html
@@ -287,7 +287,7 @@
     <!-- DateJS -->
     <script src="../../../gentelella/vendors/DateJS/build/date.js"></script>
     <!-- bootstrap-daterangepicker -->
-    <script src="../..../gentelella/vendors/moment/min/moment.min.js"></script>
+    <script src="../../../gentelella/vendors/moment/min/moment.min.js"></script>
     <script src="../../../gentelella/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
     
     <!-- Custom Theme Scripts -->
