--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
@@ -157,7 +157,7 @@
                   </div>
                   <div class="x_content">
                       <table class="table table-hover" id="blueprintTable">
-                        <script>readVSBlueprint("blueprintTable");</script>                        
+                        <script>readVSBlueprint(["blueprintTable", "image"]);</script>
                       </table>
                   </div>
                 </div>
@@ -182,8 +182,9 @@
               <div class="col-md-4">
               </div>
             </div>
-        
-        
+
+            <img id="image" src="http://placehold.it/600x400" alt="VSB graphical representation" height="600" width="400">
+
             <div class="row">
               <div class="col-md-6" id="response">
               </div>
