GUI: implemented image representation
Also added imgUrl paramenter in the vsBlueprint element in the BackEnd

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
@@ -406,7 +406,7 @@
                                 <a href="#" class="close">X</a>
                             </div>
                             <div class="loader">Loading</div>
-                            <a href="#" class="buttonFinish buttonDisabled btn btn-default" id="finishBtn" onclick=submitBlueprintCreationRequest("blueprintArchive");>Finish</a>
+                            <a href="#" class="buttonFinish buttonDisabled btn btn-default" id="finishBtn" onclick="submitBlueprintCreationRequest('blueprintArchive')";>Finish</a>
                             <a href="#" class="buttonNext btn btn-success" onclick=progressBlueprintWizard(); id="progressBtn">Next</a>
                             <a href="#" class="buttonPrevious buttonDisabled btn btn-primary" onclick=undoBlueprintWizard(); id="undoBtn">Previous</a>
                         </div>
