GUI: add network slices visualization

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
@@ -96,7 +96,7 @@
                   </li>
                   <li><a href="vs_descriptor.html"><i class="fa fa-file-text-o"></i> VS  Descriptors </a>
                   </li>
-                  <li><a href="../../index.html"><i class="fa fa-file"></i> Network Slices </a>
+                  <li><a href="n_slices.html"><i class="fa fa-file"></i> Network Slices </a>
                   </li>
                   <li><a href="vs_instance.html"><i class="fa fa-file-o"></i> VS Instances </a>
                   </li>
