--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/index.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/index.html
@@ -98,7 +98,7 @@
                   </li>
                   <li><a href="./pages/blueprint/vs_descriptor.html"><i class="fa fa-file-text-o"></i> VS  Descriptors </a>
                   </li>
-                  <li><a href="index.html"><i class="fa fa-file"></i> Network Slices </a>
+                  <li><a href="./pages/blueprint/n_slices.html"><i class="fa fa-file"></i> Network Slices </a>
                   </li>
                   <li><a href="./pages/blueprint/vs_instance.html"><i class="fa fa-file-o"></i> VS Instances </a>
                   </li>
