GUI: add home counter for network slieces

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/index.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/index.html
@@ -47,6 +47,7 @@
     <script src="../plugin/group_utils.js"></script>
     <script src="../plugin/blueprint_utils.js"></script>
     <script src="../plugin/vsdescriptor_utils.js"></script>
+    <script src="../plugin/ns_utils.js"></script>
     <script src="../plugin/login_utils.js"></script>
     
   </head>
@@ -198,6 +199,14 @@
                   <p></p>
                 </div>
               </div>
+              <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <div class="tile-stats">
+                  <div class="icon"><i class="fa fa-file-text"></i></div>
+                  <div class="count" id="count-NSI">0</div>
+                  <h3><a href="./pages/blueprint/n_slices.html">Network Slice instances</a></h3>
+                  <p></p>
+                </div>
+              </div>
             </div>
 
             <div class="row">
@@ -248,6 +257,7 @@
     <script>getVSBlueprints("count-Blueprint",fillBlueprintCounter);</script>
     <script>getAllVSDescriptors("count-VSD",fillVSDCounter);</script>
     <script>getVSInstanceIds("count-VSI",fillVSICounter);</script>
+    <script>getNSInstanceIds("count-NSI",fillNSICounter);</script>
     
     <!-- jQuery -->
     <script src="../../gentelella/vendors/jquery/dist/jquery.min.js"></script>
