--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/n_slices.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/n_slices.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>SEBASTIAN | VS Instance</title>
+    <title>SEBASTIAN | Network Slice Instances</title>
 
     <!-- Bootstrap -->
     <link href="../../../../gentelella/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -161,7 +161,7 @@
               <div class="col-md-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>VS Instances <small></small></h2>
+                    <h2>Network Slice Instances <small></small></h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
