--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
@@ -186,6 +186,7 @@
             <div class="row">
               <div class="col-md-2"></div>
               <div class="col-md-8">
+                <div id="cy"></div>
                 <img id="image" src="http://placehold.it/400x600" alt="VSB graphical representation" height="400" width="600">
               </div>
               <div class="col-md-2"></div>
