added cytoscape script to blueprint details page

--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
@@ -47,6 +47,7 @@
     <script src="../../../plugin/group_utils.js"></script>
     <script src="../../../plugin/blueprint_utils.js"></script>
     <script src="../../../plugin/login_utils.js"></script>
+    <script src="../../plugin/cytoscape.js-3.1.0/cytoscape.min.js"></script>
   </head>
 
   <body class="nav-md">
