--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/tenant/pages/blueprint/blueprint_details.html
@@ -201,7 +201,7 @@
 
                   </div>
                 </div>
-                <img id="image" src="http://placehold.it/400x600" alt="VSB graphical representation" height="400" width="600">
+                <!--img id="image" src="http://placehold.it/400x600" alt="VSB graphical representation" height="400" width="600"-->
               </div>
               <div class="col-md-2"></div>
             </div>
