--- a/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
+++ b/SEBASTIAN_WEB_GUI/sebastian_web_gui/admin/pages/blueprint/blueprint_wizard.html
@@ -263,6 +263,13 @@
                                   <input type="text" id="createTR-nsInstLev" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
                                 </div>
                             </div>
+                              <div class="form-group">
+                                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">NS Template <!-- span class="required">*</span -->
+                                  </label>
+                                  <div class="col-md-6 col-sm-6 col-xs-12">
+                                      <input type="text" id="createTR-nstId" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
+                                  </div>
+                              </div>
                             <br>
                             <div id="parameterAdditionals">
                               <div class="form-group">
@@ -288,7 +295,7 @@
                                   <button id="parameterPlus0" type="button" class="btn btn-info" style="width:24px; margin-left: 0; margin-top: 0; z-index: 3; position: relative; opacity: 0.9;" onclick='addParameterForm("parameterCounter","parameterAdditionals");'>
                                     <i class="fa fa-plus" alt="Add parameters" title="Add parameters" style="margin-left: -5px"></i>
                                   </button>
-                                  <button id="paramSubmit0" type="button" class="btn btn-info" onclick='uploadTRFromForm("step-5",["createTR-nsdId","createTR-nsdVersion","createTR-nsFlav","createTR-nsInstLev","createTR-parId","createTR-minVal","createTR-maxVal"],"parameterCounter");'>Submit</button>
+                                  <button id="paramSubmit0" type="button" class="btn btn-info" onclick='uploadTRFromForm("step-5",["createTR-nsdId","createTR-nsdVersion","createTR-nsFlav","createTR-nsInstLev","createTR-nstId","createTR-parId","createTR-minVal","createTR-maxVal"],"parameterCounter");'>Submit</button>
                               </div>
                               <div id="parameterCounter" style="display:none;">
                                 1
