modified gui to use environment variables

--- a/angular-slicer/slicer/src/index.html
+++ b/angular-slicer/slicer/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>SEBASTIAN</title>
+  <script src="assets/env.js"></script>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
